[project]
name = "utilities-toolkit"
version = "0.2.0"
description = "A lightweight utilities package for managing configuration and logging across multiple projects. It provides a simple interface to create and access configuration files in various formats, along with a straightforward logging system that can optionally centralize logs and configs in a single location."
readme = "README.md"
authors = [
    { name = "Jules MOURGUES-HAROCHE", email = "julesmourgues@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.build-backend]
module-root = "src"
module-name = "utilities"
